--- a/style.css
+++ b/style.css
@@ -14,6 +14,19 @@ body{
     min-height: 100vh;
 }
 
+.box{
+    background-color: rgba(253, 255, 255, 0.5);;
+    border-radius: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: 100%;
+
+    
+}
+
 h1{
     margin-bottom: 20px;
 }
@@ -65,6 +78,7 @@ p{
     border: none; 
     border-radius: 5px; 
     cursor: pointer;
+    margin-bottom: 20px;
 }
 
 @media (min-width: 768px) {
